DOCS: Trying to implement serenity rest