@@ -88,6 +88,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-screenplay-rest -->
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-screenplay-rest</artifactId>
+            <version>4.1.20</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -122,16 +130,30 @@
                     <argLine>--illegal-access=warn</argLine>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <includes>
+                        <include>**/When*.java</include>
+                        <include>**/*Feature.java</include>
+                    </includes>
+                    <systemPropertyVariables>
+                        <restapi.baseurl>https://automationexercise.com/api</restapi.baseurl>
+                    </systemPropertyVariables>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>default</id>
-            <properties>
-                <surefire.argLine>--illegal-access=warn</surefire.argLine>
-            </properties>
-        </profile>
-    </profiles>
 
 </project>
